<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
         android:padding="16dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
             android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/interval"
             android:textColor="@color/black"
             android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
             android:background="@drawable/email_password_background"
            android:layout_width="match_parent"
             android:padding="8dp"
android:id="@+id/et_interval"
            android:hint="@string/in_seconds"
             android:inputType="number"
            android:layout_height="wrap_content"/>

        <TextView
             android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/amazon_s3_url"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/email_password_background"
            android:layout_width="match_parent"
            android:padding="8dp"
android:hint="@string/amazon_s3_url"
            android:lines="1"
            android:maxLines="2"
             android:id="@+id/et_url"
             android:text="@string/https_app_pictureupload_s3_us_west_2_amazonaws_com"
            android:inputType="textWebEmailAddress"
            android:layout_height="wrap_content"
            tools:ignore="TextFields" />

        <TextView
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textSize="12sp"
            android:text="@string/ex_https_jared_bucket_us_s3_us_west_1_amazonaws_com_jaredapp_images"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
             android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
android:id="@+id/btn_next"
             android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
             android:background="@color/black"
             android:text="@string/next"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>